--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/kiaruh/api-pickle#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "node": "^17.0.1"
   },
